# mirror_platform_frameworks_native

./: .gitignore  Android.bp  OWNERS  PREUPLOAD.cfg  TEST_MAPPING  cherry_pick_justifications.txt  project.config  text.txt  typescript
aidl/binder/: Android.bp
cmds/atrace/: Android.bp  Android.mk  atrace.cpp  atrace.rc  atrace_userdebug.rc
cmds/bigsurface/: Android.mk  BigSurface.cpp
cmds/bugreport/: Android.bp  Android.mk  OWNERS  bugreport.cpp  bugreport.rc
cmds/bugreportz/: Android.bp  AndroidTest.xml  DumpstateClient.cpp  DumpstateClient.h  DumpstateClient_test.cpp  TestableDumpstateClient.h  bugreportz.cpp  bugreportz.h  bugreportz_test.cpp  main.cpp  readme.md  testDumpstateClient.plantuml  testlog
cmds/cmd/: Android.bp  cmd.cpp
cmds/dirtyrect/: Android.mk  DirtyRect.cpp
cmds/dumpstate/: Android.bp  Android.mk  AndroidTest.xml  BugreportEntries.cpp  BugreportEntries.h  DumpPool.cpp  DumpPool.h  DumpstateInternal.cpp  DumpstateService.cpp  DumpstateService.h  DumpstateUtil.cpp  DumpstateUtil.h  EntryList.cpp  EntryList.h  README.md  TEST_MAPPING  dumpstate.c  dumpstate.cpp  dumpstate.h  dumpstate.rc  dumpstate_test.xml  dumpstate_test_arm.xml  dumpstate_test_arm64.xml  dumpstate_test_x86.xml  main.cpp  utils.c  utils.cpp
cmds/dumpsys/: Android.bp  OWNERS  dumpsys.cpp  dumpsys.h
cmds/flatland/: Main.cpp
cmds/hidlcli/: Android.bp  CommandVibrator.cpp  HidlCli.h  main.cpp  utils.h  vibrator.h
cmds/idlcli/: Android.bp
cmds/installd/: Android.bp  Android.mk  CacheItem.cpp  CacheItem.h  CacheTracker.cpp  CacheTracker.h  InstalldNativeService.cpp  InstalldNativeService.h  MatchExtensionGen.h  OWNERS  QuotaUtils.cpp  QuotaUtils.h  TEST_MAPPING  commands.c  commands.cpp  dexopt.cpp  dexopt.h  dexopt_return_codes.h  execv_helper.cpp  execv_helper.h  file_parsing.h  globals.cpp  globals.h  installd.c  installd.cpp  installd.h  installd_constants.h  installd_deps.h  matchgen.py  otapreopt.cpp  otapreopt_chroot.cpp  otapreopt_parameters.cpp  otapreopt_parameters.h  otapreopt_script.sh  otapreopt_utils.cpp  otapreopt_utils.h  restorable_file.cpp  restorable_file.h  run_dex2oat.cpp  run_dex2oat.h  (+9 more)
cmds/ip-up-vpn/: Android.bp
cmds/lshal/: Android.bp  CallCommand.cpp  CallCommand.h  DebugCommand.cpp  DebugCommand.h  ListCommand.cpp  ListCommand.h  Lshal.cpp  Lshal.h  MockableServiceManager.h  NullableOStream.h  OWNERS  PipeRelay.cpp  PipeRelay.h  TableEntry.cpp  TableEntry.h  TextTable.cpp  TextTable.h  Timeout.h  WaitCommand.cpp  WaitCommand.h  lshal.cpp  test.cpp  utils.h
cmds/newservicemanager/: Android.mk  README.md  new_svc.cpp  new_svc.h
cmds/rawbu/: Android.bp
cmds/rss_hwm_reset/: Android.bp  rss_hwm_reset.cc
cmds/service/: Android.bp  Android.mk  service.cpp
cmds/servicemanager/: Access.cpp  Android.bp  Android.mk  ServiceManager.cpp  ServiceManager.h  ServiceManagerFuzzer.cpp  TEST_MAPPING  bctest.c  binder.c  binder.h  fuzzer.cpp  main.cpp  service_manager.c  servicemanager.rc  setup.cpp  setup.h  test_sm.cpp
cmds/surfacereplayer/: Android.bp
data/etc/: Android.bp  android.hardware.camera.xml  android.hardware.face_authentication.xml  android.hardware.iris.xml  android.hardware.keymint.limited_use_key.xml  android.hardware.keymint.single_use_key.xml  android.hardware.keystore.app_attest_key.xml  android.hardware.keystore.limited_use_key.xml  android.hardware.limitedusekey.multiplecount.xml  android.hardware.limitedusekey.singlecount.xml  android.hardware.nfc.ese.xml  android.hardware.nfc.hcef.sensf.xml  android.hardware.nfc.hcef.xml  android.hardware.nfc.uicc.xml  android.hardware.telephony.simlock.xml  android.hardware.wifi.xml  android.software.disable_packet_tracker.xml  android.software.ipsec_tunnel_migration.xml  android.software.ipsec_tunnels.xml  android.software.nfc.default_manager_api.xml  android.software.nfc.default_manager_setting.xml  android.software.wallet_manager_api.xml  android.software.wallet_manager_setting.xml  car_core_hardware.xml  go_handheld_core_hardware.xml  handheld_core_hardware.xml  pc_core_hardware.xml  tablet_core_hardware.xml  tcl.software.cell_broadcast.xml
docs/: Doxyfile  DoxygenLayout.xml  Makefile  footer.html  header.html  style.css
headers/: Android.bp
include/: OWNERS  input  media
include/android/: #input.h#  .#input.h  asset_manager.h  asset_manager_jni.h  bitmap.h  configuration.h  input.h  keycodes.h  looper.h  multinetwork.h  native_activity.h  native_window.h  native_window_jni.h  obb.h  process.h  rect.h  sensor.h  sharedmem.h  sharedmem_jni.h  storage_manager.h  trace.h  window.h
include/audiomanager/: AudioManager.h  IAudioManager.h
include/binder/: Error.h  IBinder.h  IPCThreadState.h  Parcel.h  Parcelable.h  PersistableBundle.h  ProcessState.h  Status.h
include/gui/: BufferQueue.h  BufferQueueConsumer.h  BufferQueueCore.h  BufferQueueProducer.h  ConsumerBase.h  GraphicBufferAlloc.h  GraphicsEnv.h  IGraphicBufferProducer.h  ISurfaceComposer.h  Sensor.h  Surface.h  SurfaceComposerClient.h
include/input/: Input.h  InputApplication.h  InputDevice.h  InputEventLabels.h  InputTransport.h  KeyCharacterMap.h  KeyLayoutMap.h  (+2 more)
libs/binder/linux/: .gitignore  CMakeLists.txt  Dockerfile  OS.cpp  build.sh  release.sh  rpi-arm64-llvm-toolchain.cmake
libs/binder/linux/aidl/: CMakeLists.txt  copy-aidl-gen.sh
libs/binder/linux/cmake/: AppendCxxFlagIfSupported.cmake
libs/binder/linux/docker/clang/: Dockerfile
libs/binder/linux/docker/gcc/: Dockerfile  build-and-test.sh
libs/binder/linux/docker/rpi-cross/: Dockerfile  README  rpi-arm64-gcc-toolchain.cmake
libs/binder/linux/gcc/: Dockerfile
libs/binder/linux/libandroid/: CMakeLists.txt
libs/binder/linux/libbase/: CMakeLists.txt  logging.cpp
libs/binder/linux/libcutils/: CMakeLists.txt
libs/binder/linux/libcutils/include/: stdatomic.h
libs/binder/linux/liblog/: CMakeLists.txt  logger_write.cpp
libs/binder/linux/liblog/include/android/: log.h
libs/binder/linux/liblog/include/log/: log.h
libs/binder/linux/libutils/: CMakeLists.txt
opengl/: ANGLE.md  Android.bp  OWNERS
vulkan/: Android.bp  Android.mk  OWNERS
(+1623 files in other folders)
